handle error, change how to extract metadata